--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,72 +1,46 @@
-/* GLOBAL STYLES
--------------------------------------------------- */
-/* Padding below the footer and lighter body text */
+.overdance {
 
-body {
-  padding-bottom: 3rem;
-  color: #5a5a5a;
+  /* background: rgba(0, 0, 0, 0.7); */
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.overdance p{
+  color:white;
+}
+
+.overdance:target {
+
+  visibility: visible;
+  opacity: 0.9;
+  
+}
+
+.popup {
+  
+  background: black;
+  
+  
+  position: relative;
+  transition: all 5s ease-in-out;
 }
 
 
-/* CUSTOMIZE THE CAROUSEL
--------------------------------------------------- */
-
-/* Carousel base class */
-.carousel {
-  margin-bottom: 4rem;
-}
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  bottom: 3rem;
-  z-index: 10;
-}
-
-/* Declare heights because of positioning of img element */
-.carousel-item {
-  height: 32rem;
-  background-color: #777;
-}
-.carousel-item > img {
+.popup .udah {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 20px;
+  right: 30px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
 }
-
-
-/* MARKETING CONTENT
--------------------------------------------------- */
-
-/* Center align the text within the three columns below the carousel */
-.marketing .col-lg-4 {
-  margin-bottom: 1.5rem;
-  text-align: center;
+.popup .udah:hover {
+  color: #06D85F;
 }
-.marketing h2 {
-  font-weight: 400;
-}
-.marketing .col-lg-4 p {
-  margin-right: .75rem;
-  margin-left: .75rem;
-}
-
-/* RESPONSIVE CSS
--------------------------------------------------- */
-
-@media (min-width: 40em) {
-  /* Bump up size of carousel content */
-  .carousel-caption p {
-    margin-bottom: 1.25rem;
-    font-size: 1.25rem;
-    line-height: 1.4;
-  }
-
-  .featurette-heading {
-    font-size: 50px;
-  }
-}
-
-@media (min-width: 62em) {
-  .featurette-heading {
-    margin-top: 7rem;
-  }
+.popup .kobar {
+  max-height: 30%;
+  overflow: auto;
 }
